--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/gudetama.ico">
+  <meta name="description" content="First year student majoring in Pre-Business at UC Riverside">
+  <meta name="author" content="862403914">
 
-  <title>John Doe - Business Administration</title>
+  <title>Rachael Chen- Pre-Business</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Rachael Chen</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/rachaelchen.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,24 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Rachael Chen
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
-
-        Enter bio here<br><br>
-
-        Enter bio here
+        <div class="subheading mb-5">Pre-Business</div>
+        <p class="lead mb-4">I am a first-year Pre-Business student at the University of California, Riverside, aspiring to pursue a career in accounting and law. I am bilingual and fluent in English and Cantonese. My academic journey is driven by passion, determination, and complemented by my active role as a member of Beta Alpha Psi. This community shares my enthusiasm for finance and accounting and embodies the spirit of collaboration and lifelong learning. I have actively sought opportunities to gain practical experience during my academic journey. During my internship at Vititoe Law Group, I had the privilege of immersing myself in the day-to-day operations of the legal profession, gaining valuable hands-on experience and insights. My internship deepened my appreciation for the law and provided practical insights into the connection between law and finance. Additionally, I served as a volunteer leader at the Huntington Library, where I further honed my leadership and organizational skills while contributing to a valuable community institution.</p> <br><br>
+        Beyond my professional engagements, I was honored to serve as Vice President of the Book Club and Love For Our Elders, where my passion for literature and empathy for the elderly found a deep outlet. Additionally, my roles as Secretary in both the Art Club and the Choir Club nurtured my artistic and creative talents, culminating in accolades such as the Scholastic Art and Writing Awards, where I achieved distinctions including Gold Key, Silver Key, and Honorable Mention. My commitment to academic excellence is evidenced by my weighted GPA of 4.11, further substantiated by the rigorous pursuit of six Advanced Placement (AP) courses, encompassing English Language and Composition, English Literature and Composition, United States History, World History, Macroeconomics, and Calculus AB. These experiences have sharpened my intellectual abilities and ingrained in me the discipline and resilience necessary to thrive in the face of academic challenges. In addition to my educational and professional pursuits, I am an active member of Beta Alpha Psi, a prestigious honor organization for finance and accounting students and professionals. Being a part of this respected community has deepened my understanding of these fields and provided me with invaluable networking opportunities and a platform to contribute to the growth of accounting knowledge.<br><br>
+        Currently, I am looking for more opportunities and experience through internships and part-time jobs focused on finance and accounting. I firmly believe in the power of networking and collaboration, so feel free to reach out if you're interested in discussing potential opportunities, sharing insights, or simply connecting with a like-minded individual dedicated to personal and professional growth. Thank you so much for taking the time to visit my profile. I'm excited about the potential for collaboration and mutual growth. Let's embark on this exciting journey together, where each connection and partnership brings us closer to our goals and a future filled with endless opportunities. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/rachaelchen198">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.youtube.com/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:rchen198@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +90,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Intern</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.vititoelawgroup.com/">Vititoe Law Group</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Handling administrative needs, translating documents onto files, and locating legal documents and reports or lawyers to access<br> 
+              • Conducting in-depth legal research on 30+ cases, providing comprehensive analysis, and identitfying key precedents for effective legal strategies<br>
+              • Managing and maintaining 100+ case files, organizing documents, maintaining confidentiality, and ensuring easy accessibility for attorneys and suppport staff<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">December 2021 - May 2023</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Volunteer Leader</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://huntington.org/">The Huntington Library</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Participating in volunteer oientations and training sessions to learn about organizational changes and mission updates<br>
+              • Led team of 15 volunteers in organizing and facilitating art workshops for visitors, fostering creativity and artistic expression in community<br>
+              • Assisting in coordinating art exhibitions and events, including managing logistics, promoting events, and ensuring smooth execution<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">May 2022 - March 2023</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Vice President</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Mark Keppel High School Book Club</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Successfully led and moderated 2 monthly book discussions, ensuring engaging and well-organized meetings<br>
+            • Coordinated and executed two book donation events, attracting over 50 attendees and enhancing the club's reputation<br>
+            • Contributed to book selection by recommending 12 titles, aligning with member preferences and diversifying reading lists<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2021 - May 2023</span>
           </div>
         </div>
 
@@ -152,33 +150,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Science</div>
+            <div>B.S. in Business Administration</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2023 - June 2027</span>
           </div>
         </div>
 
@@ -190,16 +166,19 @@
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+          <center>
+           <img src="img/image1.jpeg" width="500px">
+           <img src="img/image2.jpeg" width="500px"><br>
+           <img src="img/image3.jpeg" width="500px">
+           <img src="img/image4.jpeg" width="500px"><br>
+          </center>
       </div>
     </section>
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Rachael Chen</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
